[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Efosa Oyegun <efosao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["handlebars_templates", "json", "handlebars_templates"]
